Fix contrast for visually-hidden span  element

--- a/assets/style.css
+++ b/assets/style.css
@@ -42,6 +42,10 @@ body {
 	width: 20px;
 }
 
+.visually-hidden {
+	color: rgb(0, 0, 0);
+}
+
 #about {
 	display: flex;
 	background-color: #F6D2B8;
